--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>SidGames's website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
