--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
   <h1 class="title">Welcome!</h1>
   <div class="center" id="main-content">
-    
+    <iframe src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
   </div>
 </div>
 
