--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <div class="container">
   <h1 class="title">Welcome!</h1>
   <div class="center" id="main-content">
+    <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
+    <button id="goto-github-account">Why not check out my GitHub profile?</button><br>
     <iframe src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
+    <iframe src="https://github-readme-stats.vercel.app/api/top-langs/?username=basiccorruption&theme=shades-of-purple"></iframe>
   </div>
 </div>
 
