--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div class="center" id="main-content">
     <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
     <button id="goto-github-account">Why not check out my GitHub profile?</button><br>
-    <iframe src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
-    <iframe src="https://github-readme-stats.vercel.app/api/top-langs/?username=basiccorruption&theme=shades-of-purple"></iframe>
+    <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
+    <iframe id="gh-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=basiccorruption&theme=shades-of-purple"></iframe>
   </div>
 </div>
 
