--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <h1 class="title">Welcome!</h1>
   <div class="center" id="main-content">
     <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
-    <button onclick="gotoGithubAccount();">GitHub</button><br>
+    <div id="social-links" align=center>
+      <button onclick="gotoGithubAccount();">GitHub</button>
+    </div><br>
     <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
     <iframe id="gh-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=basiccorruption&theme=shades-of-purple"></iframe>
   </div>
