--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
 <div class="container">
   <h1 class="title">Welcome!</h1>
-  <div class="center" id="main-content">
+  <div class="center" id="main-content" align=center>
     <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
     <div id="social-links" align=center>
       <button onclick="gotoGithubAccount();">GitHub</button>
