--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
     <div id="social-links" align=center>
       <button onclick="gotoGithubAccount();">GitHub</button>
+      <button onclick="gotoYoutubeChannel();">YouTube</button>
     </div><br>
     <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
   </div>
