--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div id="social-links" align=center>
       <button onclick="gotoGithubAccount();">GitHub</button>
       <button onclick="gotoYoutubeChannel();">YouTube</button>
+      <button onclick="gotoTiktokChannel();">TikTok</button>
+      <button onclick="gotoTwitterPage();">Twitter</button>
     </div><br>
     <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
   </div>
