--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <div class="center" id="main-content" align=center>
     <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
     <div id="social-links" align=center>
-      <button onclick="gotoGithubAccount();">GitHub</button>
-      <button onclick="gotoYoutubeChannel();">YouTube</button>
-      <button onclick="gotoTiktokChannel();">TikTok</button>
-      <button onclick="gotoTwitterPage();">Twitter</button>
+      <button class="button" onclick="gotoGithubAccount();">GitHub</button>
+      <button class="button" onclick="gotoYoutubeChannel();">YouTube</button>
+      <button class="button" onclick="gotoTiktokChannel();">TikTok</button>
+      <button class="button" onclick="gotoTwitterPage();">Twitter</button>
     </div><br>
     <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
   </div>
