--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <button class="button" onclick="gotoTwitterPage();">Twitter</button>
     </div><br>
     <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
+    <div id="project-links">
+      <button class"button" onclick="gotoGamesPage();">My Games</button>
+    </div>
   </div>
 </div>
 
