--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div><br>
     <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
     <div id="project-links">
-      <button class"button" onclick="gotoGamesPage();">My Games</button>
+      <button class"button" onclick="gotoGamesPage('home');">My Games</button>
     </div>
   </div>
 </div>
