--- a/games/index.html
+++ b/games/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta name="description" content="Webpage description goes here" />
   <meta charset="utf-8">
-  <title>Change_me</title>
+  <title>SidGames's Games</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="../script.js"></script>
 </head>
@@ -15,7 +15,10 @@
 <body>
   
 <div class="container">
-  
+  <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
+    <h1>My Games</h1>
+    <button class="button" onclick="goHome('games');">Home</button>
+  </div>
 </div>
 
 <script>
