--- a/games/index.html
+++ b/games/index.html
@@ -16,7 +16,7 @@
   
 <div class="container">
   <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
-    <h1>My Games</h1>
+    <h1 style="float: left;">My Games</h1>
     <button class="button" onclick="goHome('games');">Home</button>
   </div>
 </div>
