--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <button class="button" onclick="gotoYoutubeChannel();">YouTube</button>
       <button class="button" onclick="gotoTiktokChannel();">TikTok</button>
       <button class="button" onclick="gotoTwitterPage();">Twitter</button>
+      <button class="button" onclick="gotoDiscordServer();">Discord</button>
     </div><br>
     <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
     <div id="project-links">
