--- a/games/index.html
+++ b/games/index.html
@@ -19,6 +19,8 @@
     <h1 style="float: left;">My Games</h1>
     <button class="button" onclick="goHome('games');">Home</button>
   </div>
+  <div id="game-list">
+  </div>
 </div>
 
 <script>
