--- a/games/index.html
+++ b/games/index.html
@@ -17,7 +17,7 @@
 <div class="container">
   <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
     <h1 style="float: left;">My Games</h1>
-    <button class="button" onclick="goHome('games');">Home</button>
+    <button class="button" style="float: right;" onclick="goHome('games');">Home</button>
   </div>
   <div id="game-list">
   </div>
