--- a/games/index.html
+++ b/games/index.html
@@ -20,6 +20,10 @@
     <button class="button" style="float: right;" onclick="goHome('games');">Home</button>
   </div>
   <div id="game-list">
+    <div id="game-soundspace">
+      <h2>SoundSpace</h2>
+      <button class="button" onclick="gotoSoundSpace();">Play</button>
+    </div>
   </div>
 </div>
 
