--- a/games/index.html
+++ b/games/index.html
@@ -18,7 +18,7 @@
   <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
     <h1 style="float: left;">My Games</h1>
     <button class="button" style="float: right;" onclick="goHome('games');">Home</button>
-  </div>
+  </div><br>
   <div id="game-list">
     <div id="game-soundspace">
       <h2>SoundSpace</h2>
