--- a/games/index.html
+++ b/games/index.html
@@ -21,8 +21,8 @@
   </div><br>
   <div id="game-list">
     <div id="game-soundspace">
-      <h2>SoundSpace</h2>
-      <button class="button" onclick="gotoSoundSpace();">Play</button>
+      <h2 style="float: left;">SoundSpace</h2>
+      <button class="button" style="float:right;" onclick="gotoSoundSpace();">Play</button>
     </div>
   </div>
 </div>
