--- a/games/index.html
+++ b/games/index.html
@@ -20,6 +20,7 @@
     <button class="button" style="float: right;" onclick="goHome('games');">Home</button>
   </div><br>
   <div id="game-list">
+    <h2>Games made by my company</h2><br>
     <div id="game-soundspace">
       <h2 style="float: left;">SoundSpace</h2>
       <button class="button" style="float:right;" onclick="gotoSoundSpace();">Play</button>
