--- a/games/index.html
+++ b/games/index.html
@@ -18,13 +18,17 @@
   <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
     <h1 style="float: left;">My Games</h1>
     <button class="button" style="float: right;" onclick="goHome('games');">Home</button>
-  </div>
+  </div><br><br>
   <div id="game-list">
     <h2>Games made by my company</h2><br>
-    <div id="game-soundspace">
-      <h2 style="float: left;">SoundSpace</h2>
-      <button class="button" style="float:right;" onclick="gotoSoundSpace();">Play</button>
-    </div>
+    <table>
+      <thead>
+        <tr>
+          <td>SoundSpace</td>
+          <td><button class="button" onclick="gotoSoundSpace();">Play</button></td>
+        </tr>
+      </thead>
+      </table>
   </div>
 </div>
 
