--- a/games/index.html
+++ b/games/index.html
@@ -16,11 +16,11 @@
   
 <div class="container">
   <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
-    <h1 style="float: left;">My Games</h1>
-    <button class="button" style="float: right;" onclick="goHome('games');">Home</button>
+    <h1>My Games</h1>
+    <button class="button" onclick="goHome('games');">Home</button>
   </div><br><br>
   <div id="game-list">
-    <h2>Games made by my company</h2><br>
+    <h2>Games made by my company</h2><br><br>
     <table>
       <thead>
         <tr>
