--- a/games/index.html
+++ b/games/index.html
@@ -13,27 +13,30 @@
 </head>
 
 <body>
-  
-<div class="container">
-  <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
-    <h1>My Games</h1>
-    <button class="button" onclick="goHome('games');">Home</button>
-  </div><br><br>
-  <div id="game-list">
-    <h2>Games made by my company</h2><br><br>
-    <table>
-      <thead>
-        <tr>
-          <td>SoundSpace</td>
-          <td><button class="button" onclick="gotoSoundSpace();">Play</button></td>
-        </tr>
-      </thead>
-      </table>
-  </div>
-</div>
 
-<script>
-</script>
+  <div class="container">
+    <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
+      <h1 style="float: left;">My Games</h1>
+      <button class="button" onclick="goHome('games');">Home</button>
+    </div>
+    <div id="game-list">
+      <!-- <h2>Games made by my company</h2><br> -->
+      <table>
+        <thead>
+          <tr>
+            <td>
+              <h3>SoundSpace</h3>
+            </td>
+            <td><button class="button" onclick="gotoSoundSpace();">Play</button></td>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </div>
+
+  <script>
+  </script>
 
 </body>
+
 </html>
