--- a/index.html
+++ b/index.html
@@ -13,27 +13,29 @@
 </head>
 
 <body>
-  
-<div class="container">
-  <h1 class="title">Welcome!</h1>
-  <div class="center" id="main-content" align=center>
-    <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
-    <div id="social-links" align=center>
-      <button class="button" onclick="gotoGithubAccount();">GitHub</button>
-      <button class="button" onclick="gotoYoutubeChannel();">YouTube</button>
-      <button class="button" onclick="gotoTiktokChannel();">TikTok</button>
-      <button class="button" onclick="gotoTwitterPage();">Twitter</button>
-      <button class="button" onclick="gotoDiscordServer();">Discord</button>
-    </div><br>
-    <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
-    <div id="project-links">
-      <button class"button" onclick="gotoGamesPage('home');">My Games</button>
+
+  <div class="container">
+    <h1 class="title">Welcome!</h1>
+    <div id="main-content" align=center>
+      <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
+      <div id="social-links" align=center>
+        <button class="button" onclick="gotoGithubAccount();">GitHub</button>
+        <button class="button" onclick="gotoYoutubeChannel();">YouTube</button>
+        <button class="button" onclick="gotoTiktokChannel();">TikTok</button>
+        <button class="button" onclick="gotoTwitterPage();">Twitter</button>
+        <button class="button" onclick="gotoDiscordServer();">Discord</button>
+      </div><br>
+      <iframe id="gh-stats"
+        src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
+      <div id="project-links">
+        <button class"button" onclick="gotoGamesPage('home');">My Games</button>
+      </div>
     </div>
   </div>
-</div>
 
-<script>
-</script>
+  <script>
+  </script>
 
 </body>
+
 </html>
