--- a/games/index.html
+++ b/games/index.html
@@ -32,6 +32,7 @@
         </thead>
       </table>
     </div>
+    <p>You can donate to support my projcts through my <a href="https://basiccorruption.itch.io">itch.io page</a></p>
   </div>
 
   <script>
