--- a/games/index.html
+++ b/games/index.html
@@ -15,9 +15,9 @@
 <body>
 
   <div class="container">
-    <div id="menu-bar" align=center style="align-items: center; justify-content: center;">
+    <div id="menu-bar" class="header" align=center style="align-items: center; justify-content: center;">
       <h1 style="float: left;">My Games</h1>
-      <button class="button" onclick="goHome('games');">Home</button>
+      <button class="button" onclick="goHome(1);">Home</button>
     </div>
     <div id="game-list">
       <!-- <h2>Games made by my company</h2><br> -->
