--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <title>Change_me</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://basiccorruption.github.io/website-revamped/style.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="script.js"></script>
 </head>
