--- a/codematrix/index.html
+++ b/codematrix/index.html
@@ -20,7 +20,7 @@
     <button class="button" onclick="goHome(1);">Home</button><br>
     <p>A simple project I made just for fun</p>
   </div>
-  <a href="./proj/bin/html5/bin/index.html"><button class="button">Start</button></a>
+  <a href="./proj/bin/html5/bin/index.html"><button class="button" style="float: right;">Start</button></a>
 </div>
 
 <script>
