--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=shades-of-purple"></iframe>
       <div id="project-links">
         <button class"button" onclick="gotoGamesPage('home');">My Games</button>
+        <button class="button" onclick="gotoProjectsPage('home');">My Projects</button>
       </div>
     </div>
   </div>
