--- a/projects/index.html
+++ b/projects/index.html
@@ -14,6 +14,16 @@
             <h1 style="float: left;">Projects</h1>
             <button class="button" onclick="goHome(1);">Home</button>
         </div>
+        <div id="project-list">
+            <table>
+                <td>
+                    <tr>CodeMatrix</tr>
+                </td>
+                <td>
+                    <tr><button class="button">Open</button></tr>
+                </td>
+            </table>
+        </div>
     </div>
 </body>
 </html>
