--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
             <h1 style="float: left;">Projects</h1>
             <button class="button" onclick="goHome(1);">Home</button>
         </div>
-        <div id="project-list">
+        <div id="project-list" align=center style="align-items: center; justify-content: center;">
             <table>
                 <td>
                     <tr>CodeMatrix</tr>
