--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@
                     <tr>CodeMatrix</tr>
                 </td>
                 <td>
-                    <tr><button class="button">Open</button></tr>
+                    <tr><button class="button" onclick="gotoProject('codeMatrix');">Open</button></tr>
                 </td>
             </table>
         </div>
