--- a/projects/index.html
+++ b/projects/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="../style.css" />
     <script src="../script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SidGames's projects</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="container">
-        <div id="menu-bar" class="header" align=center style="align-items: center; justify-content: center;">
-            <h1 style="float: left;">Projects</h1>
-            <button class="button" onclick="goHome(1);">Home</button>
-        </div>
-        <div id="project-list" align=center style="align-items: center; justify-content: center;">
-            <table>
-                <td>
-                    <tr>CodeMatrix</tr>
-                </td>
-                <td>
-                    <tr><button class="button" onclick="gotoProject('codeMatrix');">Open</button></tr>
-                </td>
-            </table>
-        </div>
+      <div
+        id="menu-bar"
+        class="header"
+        align="center"
+        style="align-items: center; justify-content: center"
+      >
+        <h1 style="float: left">Projects</h1>
+        <button class="button" onclick="goHome(1);">Home</button>
+      </div>
+      <div
+        id="project-list"
+        align="center"
+        style="align-items: center; justify-content: center"
+      >
+        <table>
+          <td>
+            <tr>
+              CodeMatrix
+            </tr>
+          </td>
+          <td>
+            <tr>
+              <button class="button" onclick="gotoProject('codeMatrix');">
+                Open
+              </button>
+            </tr>
+          </td>
+        </table>
+      </div>
     </div>
-</body>
+  </body>
 </html>
