--- a/bitcoinmining/index.html
+++ b/bitcoinmining/index.html
@@ -11,11 +11,13 @@
     <h2>Best mining cards and cpus</h2>
     <iframe
       src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdPbarmRV4o7RPI4GdnDn4DqOMHe_YtJS6Mv31cU4rnWXUuteATruBFARHZLXz59U6id0BVMp_Bi4b/pubhtml?widget=true&amp;headers=false"
+      width="100%"
+      height="600"
     ></iframe>
     <h2>Submit new statistics for card or cpu</h2>
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLScVrBxPJGDP-6F4Eyf1wbK9vnhRKhVzytTMMBEsQgFrF60z7w/viewform?embedded=true"
-      width="640"
+      width="100%"
       height="1878"
       frameborder="0"
       marginheight="0"
