--- a/bitcoinmining/index.html
+++ b/bitcoinmining/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bitcoin Mining Card Info</title>
+    <script src="../script.js"></script>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Welcome to my bitcoin mining info site!</h1>
