--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <link
       rel="stylesheet"
-      href="https://basiccorruption.github.io/website-revamped/style.css"
+      href="https://basiccorruption.github.io/style.css"
     />
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="script.js"></script>
