--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="description" content="Webpage description goes here" />
     <meta charset="utf-8" />
-    <title>Change_me</title>
+    <title>404 page not found!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="" />
     <link
@@ -18,6 +18,7 @@
     <div class="container">
       <h1>Oh no! It looks like this page does not exist.</h1>
       <button class="button" onclick="history.back();">Go back</button>
+      <button class="button" onclick="forceHome();">Go home</button>
     </div>
 
     <script></script>
