--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button class"button" onclick="gotoGamesPage('home');">My Games</button>
         <button class="button" onclick="gotoProjectsPage('home');">My Projects</button>
       </div>
+      <p id="typewriter"></p>
     </div>
   </div>
 
