--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
   </div>
 
   <script>
+    var i = 0;
+var txt = 'This is the typewriter effect. I totally didn\'t steal this code from w3schools.'; /* The text */
+var speed = 50; /* The speed/duration of the effect in milliseconds */
+
+function typeWriter() {
+  if (i < txt.length) {
+    document.getElementById("typewriter").innerHTML += txt.charAt(i);
+    i++;
+    setTimeout(typeWriter, speed);
+  }
+}
   </script>
 
 </body>
