--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class"button" onclick="gotoGamesPage('home');">My Games</button>
         <button class="button" onclick="gotoProjectsPage('home');">My Projects</button>
       </div>
-      <p id="typewriter"></p>
+      <p id="typewriter">i tried to make a typewriter effect but if you are seeing this text it means that my awful code did not work</p>
     </div>
   </div>
 
