--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
   <link rel="stylesheet" href="style.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="script.js"></script>
+
+  <script type="text/javascript" src="./flixel-test.js"></script>
+	
+	<script>
+		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
+		if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
+			var meta = document.getElementById ("viewport");
+			meta.setAttribute ('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
+		}
+	</script>
+	
+	<style>
+		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
+		#openfl-content { background: #000000; width: 640px; height: 480px; }
+		@font-face {
+			font-family: 'Nokia Cellphone FC Small';
+			src: url('flixel/fonts/nokiafc22.eot?#iefix') format('embedded-opentype'),
+			url('flixel/fonts/nokiafc22.woff') format('woff'),
+			url('flixel/fonts/nokiafc22.ttf') format('truetype'),
+			url('flixel/fonts/nokiafc22.svg#Nokia%20Cellphone%20FC%20Small') format('svg');
+			font-weight: normal;
+			font-style: normal;
+		}
+		@font-face {
+			font-family: 'Monsterrat';
+			src: url('flixel/fonts/monsterrat.eot?#iefix') format('embedded-opentype'),
+			url('flixel/fonts/monsterrat.woff') format('woff'),
+			url('flixel/fonts/monsterrat.ttf') format('truetype'),
+			url('flixel/fonts/monsterrat.svg#Monsterrat') format('svg');
+			font-weight: normal;
+			font-style: normal;
+		}
+
+	</style>
 </head>
 
 <body>
@@ -33,6 +67,8 @@
       </div>
       <p id="typewriter">i tried to make a typewriter effect but if you are seeing this text it means that my awful code did not work</p>
     </div>
+
+    
   </div>
 
   <script>
@@ -48,6 +84,14 @@ function typeWriter() {
   }
 }
   </script>
+
+  <noscript>So I made an app in haxe. If you are seeing this it means that you have disabled javascript. Unfortunately, you cannot see this app unless you have javascript enabled.</noscript>
+	
+	<div id="openfl-content"></div>
+	
+	<script type="text/javascript">
+		lime.embed ("flixel-test", "openfl-content", 640, 480, { parameters: {} });
+	</script>
 
 </body>
 
