--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function typeWriter() {
 
   <noscript>So I made an app in haxe. If you are seeing this it means that you have disabled javascript. Unfortunately, you cannot see this app unless you have javascript enabled.</noscript>
 	
-	<div id="openfl-content"></div>
+	<div id="openfl-content" align="center"></div>
 	
 	<script type="text/javascript">
 		lime.embed ("flixel-test", "openfl-content", 640, 480, { parameters: {} });
