--- a/linktree/index.html
+++ b/linktree/index.html
@@ -17,7 +17,7 @@
 		<h1>SidGames5</h1>
 		<button onclick="website();">Website<button><br>
 		<button onclick="youtube();">YouTube<button><br>
-		button onclick="kryptex();">Kryptex<button><br>
+		<button onclick="kryptex();">Kryptex<button>
 	</div>
 
 	<script>
