--- a/bitcoinmining/index.html
+++ b/bitcoinmining/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Welcome to my bitcoin mining info site!</h1>
+    <h2>LHR UNLOCKED! Article coming soon</h2>
     <h2>Best mining cards and cpus</h2>
     <iframe
       src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdPbarmRV4o7RPI4GdnDn4DqOMHe_YtJS6Mv31cU4rnWXUuteATruBFARHZLXz59U6id0BVMp_Bi4b/pubhtml?widget=true&amp;headers=false"
