--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
 
   <script type="text/javascript" src="./flixel-test.js"></script>
 	
-	<script>
-		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
-		if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
-			var meta = document.getElementById ("viewport");
-			meta.setAttribute ('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
-		}
-	</script>
+	<script src="flixel.js"></script>
 	
 	<style>
 		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
