--- a/src/index.html
+++ b/src/index.html
@@ -78,14 +78,7 @@ function typeWriter() {
     setTimeout(typeWriter, speed);
   }
 }
-  </script>
-
-  <noscript>So I made an app in haxe. If you are seeing this it means that you have disabled javascript. Unfortunately, you cannot see this app unless you have javascript enabled.</noscript>
-	
-	<div id="openfl-content" align="center"></div>
-	
-	<script type="text/javascript">
-		lime.embed ("flixel-test", "openfl-content", 640, 480, { parameters: {} });
+	  typeWriter();
 	</script>
 
 </body>
