--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
   </div>
 
   <script>
+	  document.getElementById("typewriter").innerHTML == "";
     var i = 0;
 var txt = 'This is the typewriter effect. I totally didn\'t steal this code from w3schools.'; /* The text */
 var speed = 50; /* The speed/duration of the effect in milliseconds */
