--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,8 @@
   </div>
 
   <script>
-	  document.getElementById("typewriter").innerHTML == "";
+	  function blank() { document.getElementById("typewriter").innerHTML == "" }
+	  blank();
     var i = 0;
 var txt = 'This is the typewriter effect. I totally didn\'t steal this code from w3schools.'; /* The text */
 var speed = 50; /* The speed/duration of the effect in milliseconds */
