actually fix typewriter

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         <button class="button" onclick="gotoTwitterPage();">Twitter</button>
         <button class="button" onclick="gotoDiscordServer();">Discord</button>
       </div><br>
-      <iframe id="gh-stats"
-        src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=highcontrast"></iframe>
+      <iframe id="gh-stats" src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=highcontrast"></iframe>
       <div id="project-links">
         <button class"button" onclick="gotoGamesPage('home');">My Games</button>
         <button class="button" onclick="gotoProjectsPage('home');">My Projects</button>
@@ -74,7 +73,7 @@ var txt = 'This is the typewriter effect. I totally didn\'t steal this code from
 var speed = 50; /* The speed/duration of the effect in milliseconds */
 
 function typeWriter() {
-	if (document.getElementById("typewriter").innerHTML != "") {
+	if (document.getElementById("typewriter").innerHTML == "i tried to make a typewriter effect but if you are seeing this text it means that my awful code did not work") {
 		document.getElementById("typewriter").innerHTML = "";
 	}
   if (i < txt.length) {
