--- a/index.html
+++ b/index.html
@@ -1,104 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta name="description" content="SidGames's Website" />
-  <meta charset="utf-8">
-  <title>SidGames's website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="">
-  <link rel="stylesheet" href="style.css">
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SidGames5's Website</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="script.js"></script>
 
-  <script type="text/javascript" src="./flixel-test.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <script src="flixel.js"></script>
-
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    #openfl-content {
-      background: #000000;
-      width: 640px;
-      height: 480px;
-    }
-
-    @font-face {
-      font-family: 'Nokia Cellphone FC Small';
-      src: url('flixel/fonts/nokiafc22.eot?#iefix') format('embedded-opentype'),
-        url('flixel/fonts/nokiafc22.woff') format('woff'),
-        url('flixel/fonts/nokiafc22.ttf') format('truetype'),
-        url('flixel/fonts/nokiafc22.svg#Nokia%20Cellphone%20FC%20Small') format('svg');
-      font-weight: normal;
-      font-style: normal;
-    }
-
-    @font-face {
-      font-family: 'Monsterrat';
-      src: url('flixel/fonts/monsterrat.eot?#iefix') format('embedded-opentype'),
-        url('flixel/fonts/monsterrat.woff') format('woff'),
-        url('flixel/fonts/monsterrat.ttf') format('truetype'),
-        url('flixel/fonts/monsterrat.svg#Monsterrat') format('svg');
-      font-weight: normal;
-      font-style: normal;
-    }
-  </style>
-  <link rel="stylesheet" href="flixel.css">
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
-
-  <div class="container">
-    <h1 class="title">Welcome!</h1>
-    <div id="main-content" align=center>
-      <h2>Hello! My name is Sid and I make somewhat useful apps and games.</h2><br>
-      <div id="social-links" align=center>
-        <button class="button" onclick="gotoGithubAccount();">GitHub</button>
-        <button class="button" onclick="gotoYoutubeChannel();">YouTube</button>
-        <button class="button" onclick="gotoTiktokChannel();">TikTok</button>
-        <button class="button" onclick="gotoTwitterPage();">Twitter</button>
-        <button class="button" onclick="gotoDiscordServer();">Discord</button>
-      </div><br>
-      <iframe id="gh-stats"
-        src="https://github-readme-stats.vercel.app/api?username=basiccorruption&theme=highcontrast"></iframe>
-      <div id="project-links">
-        <button class"button" onclick="gotoGamesPage('home');">My Games</button>
-        <button class="button" onclick="gotoProjectsPage('home');">My Projects</button>
-      </div>
-      <p id="typewriter">i tried to make a typewriter effect but if you are seeing this text it means that my awful code
-        did not work</p>
+    <div class="container">
+        <div class="fixed-header">
+            <span><h1 style="float: left;">SidGames5</h1></span>
+            <span><button class="navbuttonactive" style="float: right;">Home</button></span>
+            <span><button class="navbuttoninactive" style="float: right;">About</button></span>
+            <span><button class="navbuttoninactive" style="float: right;">Contact</button></span>
+            <span><button class="navbuttoninactive" style="float: right;">Projects</button></span>
+        </div>
     </div>
-
-
-  </div>
-
-  <script>
-    // 	  function blank() { document.getElementById("typewriter").innerHTML == "" }
-    // 	  blank();
-    var i = 0;
-    var txt = 'This is the typewriter effect. I totally didn\'t steal this code from w3schools.'; /* The text */
-    var speed = 50; /* The speed/duration of the effect in milliseconds */
-
-    function typeWriter() {
-      if (document.getElementById("typewriter").innerHTML == "i tried to make a typewriter effect but if you are seeing this text it means that my awful code did not work") {
-        document.getElementById("typewriter").innerHTML = "";
-      }
-      if (i < txt.length) {
-        document.getElementById("typewriter").innerHTML += txt.charAt(i);
-        i++;
-        setTimeout(typeWriter, speed);
-      }
-    }
-    typeWriter();
-  </script>
-
 </body>
-
 </html>
