--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>About</title>
 
-		<link rel="stylesheet" href="../style.css" />
 		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script src="../script.js"></script>
 
@@ -15,6 +14,8 @@
 			rel="stylesheet"
 		/>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+		<link rel="stylesheet" href="../style.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -47,9 +48,22 @@
 			</div>
 			<div class="content">
 				<h1>About</h1>
+				<h4>
+					Hello! My name is Sid and I code websites and minecraft
+					mods. I am also a content creator on YouTube and TikTok.
+				</h4>
+				<div class="row">
+					<div class="col"><p>I make YouTube videos</p></div>
+					<div class="col"><p>I make websites</p></div>
+					<div class="col"><p>I make games</p></div>
+					<div class="col">
+						<p>I make minecraft mods and plugins</p>
+					</div>
+				</div>
+				<h2>Some of my projects</h2>
 				<div class="row">
 					<div class="col">
-						
+						<a href="../projects/"><p>All projects</p></a>
 					</div>
 				</div>
 			</div>
