--- a/about/index.html
+++ b/about/index.html
@@ -65,6 +65,26 @@
 					<div class="col">
 						<a href="../projects/"><p>All projects</p></a>
 					</div>
+					<div class="col">
+						<a
+							href="https://www.curseforge.com/members/sidplayzlive/projects"
+							>CurseForge projects</a
+						>
+					</div>
+					<div class="col">
+						<a href="https://github.com/BasicCorruption"
+							>GitHub profile</a
+						>
+					</div>
+				</div>
+				<h4>Minecraft Mods/Plugins/Resource packs</h4>
+				<div class="row">
+					<div class="col">
+						<a
+							href="https://www.curseforge.com/minecraft/mc-mods/waymoreores"
+							>WayMoreOres</a
+						>
+					</div>
 				</div>
 			</div>
 		</div>
