--- a/about/index.html
+++ b/about/index.html
@@ -76,6 +76,11 @@
 							>GitHub profile</a
 						>
 					</div>
+					<div class="col">
+						<a href="https://basiccorruption.itch.io"
+							>Itch.io page</a
+						>
+					</div>
 				</div>
 				<h4>Minecraft Mods/Plugins/Resource packs</h4>
 				<div class="row">
