--- a/about/index.html
+++ b/about/index.html
@@ -90,6 +90,63 @@
 							>WayMoreOres</a
 						>
 					</div>
+					<div class="col">
+						<a
+							href="https://www.curseforge.com/minecraft/bukkit-plugins/minetils"
+							>MineTils</a
+						>
+					</div>
+					<div class="col">
+						<a
+							href="https://www.curseforge.com/minecraft/bukkit-plugins/privateserver"
+							>PrivateServer</a
+						>
+					</div>
+					<div class="col">
+						<a
+							href="https://www.curseforge.com/minecraft/texture-packs/snowflake"
+							>Snowflake</a
+						>
+					</div>
+				</div>
+				<h4>Social Media</h4>
+				<div class="row">
+					<div class="col">
+						<a
+							href="https://youtube.com/c/sidgames5?sub_confirmation=1"
+							>YouTube</a
+						>
+					</div>
+					<div class="col">
+						<a href="https://tiktok.com/@sidgames5">TikTok</a>
+					</div>
+					<div class="col">
+						<a href="https://twitter.com/sidgames101">Twitter</a>
+					</div>
+					<div class="col">
+						<a href="https://www.twitch.tv/sidplayzlive">Twitch</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<a href="https://reddit.com/u/sidplayzreal">Reddit</a>
+					</div>
+					<div class="col">
+						<a href="https://discord.gg/peNdGRTfgj">Discord</a>
+					</div>
+				</div>
+				<h4>Big Projects</h4>
+				<div class="row">
+					<div class="col">
+						<a href="https://mlgland.net"
+							>Minecraft Server Website</a
+						>
+					</div>
+					<div class="col">
+						<a href="https://discord.gg/FUDPYt8Hkr"
+							>Minecraft Server Discord</a
+						>
+					</div>
 				</div>
 			</div>
 		</div>
