--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>SidGames5's Website</title>
-		<link rel="stylesheet" href="style.css" />
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script src="script.js"></script>
 
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-		/>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-	</head>
-	<body>
-		<div class="container">
-			<div class="header">
-				<div class="navbar navbar-expand-sm bg-dark">
-					<div class="container-fluid">
-						<div class="navbar-header">
-							<a class="navbar-brand" href="#">SidGames5</a>
-						</div>
-						<ul class="navbar-nav">
-							<li class="nav-item">
-								<a href="#" class="nav-link">Home</a>
-							</li>
-							<li class="nav-item">
-								<a href="about/" class="nav-link">About</a>
-							</li>
-							<li class="nav-item">
-								<a href="projects/" class="nav-link">Projects</a>
-							</li>
-							<li class="nav-item">
-								<a href="contact/" class="nav-link">Contact</a>
-							</li>
-						</ul>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>SidGames5's Website</title>
+	<link rel="stylesheet" href="style.css" />
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="script.js"></script>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+	<div class="container">
+		<div class="header">
+			<div class="navbar navbar-expand-sm bg-dark">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="#">SidGames5</a>
 					</div>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a href="#" class="nav-link">Home</a>
+						</li>
+						<li class="nav-item">
+							<a href="about/" class="nav-link">About</a>
+						</li>
+						<li class="nav-item">
+							<a href="projects/" class="nav-link">Projects</a>
+						</li>
+						<li class="nav-item">
+							<a href="contact/" class="nav-link">Contact</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
-	</body>
+		<div class="content">
+			<h1>Hello!</h1>
+			<p>I am SidGames5 (formerly known as BasicCorruption) and I am a programmer. Sorry I'm using <a
+					href="https://basiccorruption.github.io">basiccorruption.github.io</a> for the URL im just too lazy
+				to change my <a href="https://github.com/basiccorruption">github</a> username. If this link works that
+				means I bought the domain: <a href="https://sidgames.dev">sidgames.dev</a>.</p>
+		</div>
+	</div>
+</body>
+
 </html>
