--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 					href="https://basiccorruption.github.io">basiccorruption.github.io</a> for the URL im just too lazy
 				to change my <a href="https://github.com/basiccorruption">github</a> username. If this link works that
 				means I bought the domain: <a href="https://sidgames.dev">sidgames.dev</a>.</p>
+			<p>I am a content creator on <a href="https://youtube.com/c/sidgames5?sub_confirmation">YouTube</a> and <a href="https://tiktok.com/@sidgames5">TikTok</a>. Make sure to subcribe and follow. I post tutorials, gaming, unboxing asmr (if i ever get a package), and random stuff.</p>
 		</div>
 	</div>
 </body>
