--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 			<p>I am a content creator on <a href="https://youtube.com/c/sidgames5?sub_confirmation">YouTube</a> and <a
 					href="https://tiktok.com/@sidgames5">TikTok</a>. Make sure to subcribe and follow. I post tutorials,
 				gaming, unboxing asmr (if i ever get a package), and random stuff.</p>
+			<div class="latest-video container">
+				<h2>Check out my latest YouTube video!</h2>
+				<!-- embed the latest video from youtube.com/c/sidgames5 -->
+				<iframe class="latestVideoEmbed" vnum='0' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="600" height="340"
+					frameborder="0" allowfullscreen></iframe>
+				<script src="ytembed.js"></script>
+			</div>
 		</div>
 	</div>
 </body>
