--- a/about/index.html
+++ b/about/index.html
@@ -1,154 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>About</title>
 
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-		<script src="../script.js"></script>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>About</title>
 
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-		/>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="../script.js"></script>
 
-		<link rel="stylesheet" href="../style.css" />
-	</head>
-	<body>
-		<div class="container">
-			<div class="header">
-				<div class="navbar navbar-expand-sm bg-dark">
-					<div class="container-fluid">
-						<div class="navbar-header">
-							<a class="navbar-brand" href="../">SidGames5</a>
-						</div>
-						<ul class="navbar-nav">
-							<li class="nav-item">
-								<a href="../" class="nav-link">Home</a>
-							</li>
-							<li class="nav-item">
-								<a href="#" class="nav-link">About</a>
-							</li>
-							<li class="nav-item">
-								<a href="../projects/" class="nav-link"
-									>Projects</a
-								>
-							</li>
-							<li class="nav-item">
-								<a href="../contact/" class="nav-link"
-									>Contact</a
-								>
-							</li>
-						</ul>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<link rel="stylesheet" href="../style.css" />
+</head>
+
+<body>
+	<div class="container">
+		<div class="header">
+			<div class="navbar navbar-expand-sm bg-dark">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="../">SidGames5</a>
 					</div>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a href="../" class="nav-link">Home</a>
+						</li>
+						<li class="nav-item">
+							<a href="#" class="nav-link">About</a>
+						</li>
+						<li class="nav-item">
+							<a href="../projects/" class="nav-link">Projects</a>
+						</li>
+						<li class="nav-item">
+							<a href="../contact/" class="nav-link">Contact</a>
+						</li>
+					</ul>
 				</div>
-			</div><br>
-			<div class="content">
-				<h1>About</h1>
-				<h4>
-					Hello! My name is Sid and I code websites and minecraft
-					mods. I am also a content creator on YouTube and TikTok.
-				</h4>
-				<div class="row">
-					<div class="col"><p>I make YouTube videos</p></div>
-					<div class="col"><p>I make websites</p></div>
-					<div class="col"><p>I make games</p></div>
-					<div class="col">
-						<p>I make minecraft mods and plugins</p>
-					</div>
+			</div>
+		</div><br>
+		<div class="content">
+			<h1>About</h1>
+			<h4>
+				Hello! My name is Sid and I code websites and minecraft
+				mods. I am also a content creator on YouTube and TikTok.
+			</h4>
+			<div class="row">
+				<div class="col">
+					<p>I make YouTube videos</p>
 				</div>
-				<h2>Some of my projects</h2>
-				<div class="row">
-					<div class="col">
-						<a href="../projects/"><p>All projects</p></a>
-					</div>
-					<div class="col">
-						<a
-							href="https://www.curseforge.com/members/sidplayzlive/projects"
-							>CurseForge projects</a
-						>
-					</div>
-					<div class="col">
-						<a href="https://github.com/BasicCorruption"
-							>GitHub profile</a
-						>
-					</div>
-					<div class="col">
-						<a href="https://basiccorruption.itch.io"
-							>Itch.io page</a
-						>
-					</div>
+				<div class="col">
+					<p>I make websites</p>
 				</div>
-				<h4>Minecraft Mods/Plugins/Resource packs</h4>
-				<div class="row">
-					<div class="col">
-						<a
-							href="https://www.curseforge.com/minecraft/mc-mods/waymoreores"
-							>WayMoreOres</a
-						>
-					</div>
-					<div class="col">
-						<a
-							href="https://www.curseforge.com/minecraft/bukkit-plugins/minetils"
-							>MineTils</a
-						>
-					</div>
-					<div class="col">
-						<a
-							href="https://www.curseforge.com/minecraft/bukkit-plugins/privateserver"
-							>PrivateServer</a
-						>
-					</div>
-					<div class="col">
-						<a
-							href="https://www.curseforge.com/minecraft/texture-packs/snowflake"
-							>Snowflake</a
-						>
-					</div>
+				<div class="col">
+					<p>I make games</p>
 				</div>
-				<h4>Social Media</h4>
-				<div class="row">
-					<div class="col">
-						<a
-							href="https://youtube.com/c/sidgames5?sub_confirmation=1"
-							>YouTube</a
-						>
-					</div>
-					<div class="col">
-						<a href="https://tiktok.com/@sidgames5">TikTok</a>
-					</div>
-					<div class="col">
-						<a href="https://twitter.com/sidgames101">Twitter</a>
-					</div>
-					<div class="col">
-						<a href="https://www.twitch.tv/sidplayzlive">Twitch</a>
-					</div>
+				<div class="col">
+					<p>I make minecraft mods and plugins</p>
 				</div>
-				<div class="row">
-					<div class="col">
-						<a href="https://reddit.com/u/sidplayzreal">Reddit</a>
-					</div>
-					<div class="col">
-						<a href="https://discord.gg/peNdGRTfgj">Discord</a>
-					</div>
+			</div>
+			<h2>Some of my projects</h2>
+			<div class="row">
+				<div class="col">
+					<a href="../projects/">
+						<p>All projects</p>
+					</a>
 				</div>
-				<h4>Big Projects</h4>
-				<div class="row">
-					<div class="col">
-						<a href="https://mlgland.net"
-							>Minecraft Server Website</a
-						>
-					</div>
-					<div class="col">
-						<a href="https://discord.gg/FUDPYt8Hkr"
-							>Minecraft Server Discord</a
-						>
-					</div>
+				<div class="col">
+					<a href="https://www.curseforge.com/members/sidplayzlive/projects">CurseForge projects</a>
+				</div>
+				<div class="col">
+					<a href="https://github.com/BasicCorruption">GitHub profile</a>
+				</div>
+				<div class="col">
+					<a href="https://basiccorruption.itch.io">Itch.io page</a>
+				</div>
+			</div>
+			<h4>Minecraft Mods/Plugins/Resource packs</h4>
+			<div class="row">
+				<div class="col">
+					<a href="https://www.curseforge.com/minecraft/mc-mods/waymoreores">WayMoreOres</a>
+				</div>
+				<div class="col">
+					<a href="https://www.curseforge.com/minecraft/bukkit-plugins/minetils">MineTils</a>
+				</div>
+				<div class="col">
+					<a href="https://www.curseforge.com/minecraft/bukkit-plugins/privateserver">PrivateServer</a>
+				</div>
+				<div class="col">
+					<a href="https://www.curseforge.com/minecraft/texture-packs/snowflake">Snowflake</a>
+				</div>
+			</div>
+			<h4>Social Media</h4>
+			<div class="row">
+				<div class="col">
+					<a href="https://youtube.com/c/sidgames5?sub_confirmation=1">YouTube</a>
+				</div>
+				<div class="col">
+					<a href="https://tiktok.com/@sidgames5">TikTok</a>
+				</div>
+				<div class="col">
+					<a href="https://twitter.com/sidgames101">Twitter</a>
+				</div>
+				<div class="col">
+					<a href="https://www.twitch.tv/sidgames5">Twitch</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<a href="https://reddit.com/u/sidplayzreal">Reddit</a>
+				</div>
+				<div class="col">
+					<a href="https://discord.gg/peNdGRTfgj">Discord</a>
+				</div>
+			</div>
+			<h4>Big Projects</h4>
+			<div class="row">
+				<div class="col">
+					<a href="https://mlgland.net">Minecraft Server Website</a>
+				</div>
+				<div class="col">
+					<a href="https://discord.gg/FUDPYt8Hkr">Minecraft Server Discord</a>
 				</div>
 			</div>
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
