Completely update website

--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,7 @@
 			<h1>About</h1>
 			<h4>
 				Hello! My name is Sid and I code websites and minecraft
-				mods. I am also a content creator on YouTube and TikTok.
+				mods. I am also a content creator on YouTube.
 			</h4>
 			<div class="row">
 				<div class="col">
@@ -69,10 +69,10 @@
 					</a>
 				</div>
 				<div class="col">
-					<a href="https://www.curseforge.com/members/sidplayzlive/projects">CurseForge projects</a>
+					<a href="https://modrinth.com/user/BasicCorruption">Minecraft projects</a>
 				</div>
 				<div class="col">
-					<a href="https://github.com/BasicCorruption">GitHub profile</a>
+					<a href="https://github.com/sidgames5">GitHub profile</a>
 				</div>
 				<div class="col">
 					<a href="https://basiccorruption.itch.io">Itch.io page</a>
@@ -81,48 +81,16 @@
 			<h4>Minecraft Mods/Plugins/Resource packs</h4>
 			<div class="row">
 				<div class="col">
-					<a href="https://www.curseforge.com/minecraft/mc-mods/waymoreores">WayMoreOres</a>
+					<a href="https://modrinth.com/mod/waymoreores">WayMoreOres</a>
 				</div>
 				<div class="col">
-					<a href="https://www.curseforge.com/minecraft/bukkit-plugins/minetils">MineTils</a>
+					<a href="https://modrinth.com/plugin/chatlink">ChatLink</a>
 				</div>
 				<div class="col">
-					<a href="https://www.curseforge.com/minecraft/bukkit-plugins/privateserver">PrivateServer</a>
+					<a href="https://modrinth.com/mod/better-decoration">Better Decorations</a>
 				</div>
 				<div class="col">
-					<a href="https://www.curseforge.com/minecraft/texture-packs/snowflake">Snowflake</a>
-				</div>
-			</div>
-			<h4>Social Media</h4>
-			<div class="row">
-				<div class="col">
-					<a href="https://youtube.com/c/sidgames5?sub_confirmation=1">YouTube</a>
-				</div>
-				<div class="col">
-					<a href="https://tiktok.com/@sidgames5">TikTok</a>
-				</div>
-				<div class="col">
-					<a href="https://twitter.com/sidgames101">Twitter</a>
-				</div>
-				<div class="col">
-					<a href="https://www.twitch.tv/sidgames5">Twitch</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<a href="https://reddit.com/u/sidplayzreal">Reddit</a>
-				</div>
-				<div class="col">
-					<a href="https://discord.gg/peNdGRTfgj">Discord</a>
-				</div>
-			</div>
-			<h4>Big Projects</h4>
-			<div class="row">
-				<div class="col">
-					<a href="https://mlgland.net">Minecraft Server Website</a>
-				</div>
-				<div class="col">
-					<a href="https://discord.gg/FUDPYt8Hkr">Minecraft Server Discord</a>
+					<a href="https://modrinth.com/plugin/player-status">Player Status</a>
 				</div>
 			</div>
 		</div>
