--- a/404.html
+++ b/404.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="description" content="Webpage description goes here" />
-    <meta charset="utf-8" />
-    <title>404 page not found!</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="" />
-    <link
-      rel="stylesheet"
-      href="https://basiccorruption.github.io/style.css"
-    />
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="script.js"></script>
-  </head>
 
-  <body>
-    <div class="container">
-      <h1>Oh no! It looks like this page does not exist.</h1>
-      <button class="button" onclick="history.back();">Go back</button>
-      <button class="button" onclick="forceHome();">Go home</button>
-    </div>
+<head>
+	<meta name="description" content="Webpage description goes here" />
+	<meta charset="utf-8" />
+	<title>404 page not found!</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="author" content="" />
+	<link rel="stylesheet" href="https://sidgames5.github.io/style.css" />
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="script.js"></script>
+</head>
 
-    <script></script>
-  </body>
+<body>
+	<div class="container">
+		<h1>Oh no! It looks like this page does not exist.</h1>
+		<button class="button" onclick="history.back();">Go back</button>
+		<button class="button" onclick="forceHome();">Go home</button>
+	</div>
+
+	<script></script>
+</body>
+
 </html>
