--- a/old-index-2.html
+++ b/old-index-2.html
@@ -41,10 +41,12 @@
 		</div><br>
 		<div class="content">
 			<h1>Hello!</h1>
-			<p>I am SidGames and I am a minecraft modder and game developer. If this link works that
+			<p>I am SidGames5 (formerly known as BasicCorruption) and I am a programmer. Sorry I'm using <a
+					href="https://sidgames5.github.io">sidgames5.github.io</a> for the URL im just too lazy
+				to change my <a href="https://github.com/sidgames5">github</a> username. If this link works that
 				means I bought the domain: <a href="https://sidgames.dev">sidgames.dev</a>.</p>
-			<p>I am a content creator on <a href="https://youtube.com/c/sidgames5?sub_confirmation=1">YouTube</a>. Make
-				sure to subcribe! I post tutorials,
+			<p>I am a content creator on <a href="https://youtube.com/c/sidgames5?sub_confirmation">YouTube</a> and <a
+					href="https://tiktok.com/@sidgames5">TikTok</a>. Make sure to subcribe and follow. I post tutorials,
 				gaming, unboxing asmr (if i ever get a package), and random stuff.</p>
 			<div class="latest-video container align-center">
 				<h2>Check out my latest YouTube video!</h2>
