--- a/projects/index.html
+++ b/projects/index.html
@@ -1,44 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="../style.css" />
-    <script src="../script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SidGames's projects</title>
-  </head>
-  <body>
-    <div id="container">
-      <div
-        id="menu-bar"
-        class="header"
-        align="center"
-        style="align-items: center; justify-content: center"
-      >
-        <h1 style="float: left">Projects</h1>
-        <button class="button" onclick="goHome(1);">Home</button>
-      </div>
-      <div
-        id="project-list"
-        align="center"
-        style="align-items: center; justify-content: center"
-      >
-        <table>
-          <td>
-            <tr>
-              CodeMatrix
-            </tr>
-          </td>
-          <td>
-            <tr>
-              <button class="button" onclick="gotoProject('codeMatrix');">
-                Open
-              </button>
-            </tr>
-          </td>
-        </table>
-      </div>
-    </div>
-  </body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>SidGames's projects</title>
+
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="../script.js"></script>
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<link rel="stylesheet" href="../style.css" />
+</head>
+
+<body>
+	<div class="container">
+		<div class="header">
+			<div class="navbar navbar-expand-sm bg-dark">
+				<div class="container-fluid">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="../">SidGames5</a>
+					</div>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a href="../" class="nav-link">Home</a>
+						</li>
+						<li class="nav-item">
+							<a href="../about/" class="nav-link">About</a>
+						</li>
+						<li class="nav-item">
+							<a href="../projects/" class="nav-link">Projects</a>
+						</li>
+						<li class="nav-item">
+							<a href="../contact/" class="nav-link">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div><br>
+		<div class="content">
+			<h1>Projects</h1><br>
+			<div class="minecraft">
+				<h2>Minecraft</h2>
+				<div class="mods">
+					<h3>Mods</h3>
+					<a href="https://modrinth.com/mod/waymoreores">WayMoreOres</a><br>
+					<a href="https://modrinth.com/mod/better-decoration">Better Decorations</a><br>
+				</div>
+				<div class="plugins">
+					<h3>Plugins</h3>
+					<a href="https://modrinth.com/plugin/chatlink">ChatLink</a><br>
+					<a href="https://modrinth.com/plugin/player-status">Player Status</a><br>
+				</div>
+			</div>
+			<div class="games">
+				<h2>Games</h2>
+				<a href="https://basiccorruption.itch.io/pizza-shop-simulator">Pizza Shop Simulator • Simulator • Open
+					Source,
+					Haxe</a><br>
+				<a href="https://basiccorruption.itch.io/microfacture">Microfacture • Simulator • $5, Java</a><br>
+			</div>
+		</div>
+	</div>
+</body>
+
 </html>
