--- a/index.html
+++ b/index.html
@@ -47,10 +47,16 @@
 				sure to subcribe! I post tutorials,
 				gaming, unboxing asmr (if i ever get a package), and random stuff.</p>
 			<div class="latest-video container align-center">
-				<h2>Check out my latest YouTube video!</h2>
 				<!-- embed the latest video from youtube.com/c/sidgames5 -->
-				<iframe class="latestVideoEmbed" vnum='0' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="600" height="340"
+				<iframe class="latestVideoEmbed" vnum='0' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
 					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='1' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='2' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+				<iframe class="latestVideoEmbed" vnum='3' cid="UCotVsD7JWzhYKSp3AsVsr5g" width="320" height="180"
+					frameborder="0" allowfullscreen></iframe>
+
 				<script src="ytembed.js"></script>
 			</div>
 		</div>
