--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 		</div><br>
 		<div class="content">
-			<h1>Hello!</h1>
+			<h1>hello there</h1>
 			<p>I am SidGames and I am a minecraft modder and game developer. If this link works that
 				means I bought the domain: <a href="https://sidgames.dev">sidgames.dev</a>.</p>
 			<p>I am a content creator on <a href="https://youtube.com/c/sidgames5?sub_confirmation=1">YouTube</a>. Make
