--- a/projects/index.html
+++ b/projects/index.html
@@ -58,8 +58,7 @@
 			</div>
 			<div class="games">
 				<h2>Games</h2>
-				<a href="https://basiccorruption.itch.io/pizza-shop-simulator">Pizza Shop Simulator • Simulator • Open
-					Source,
+				<a href="https://basiccorruption.itch.io/pizza-shop-simulator">Pizza Shop Simulator • Simulator • Free,
 					Haxe</a><br>
 				<a href="https://basiccorruption.itch.io/microfacture">Microfacture • Simulator • $5, Java</a><br>
 			</div>
