--- a/setup/audio.html
+++ b/setup/audio.html
@@ -47,13 +47,22 @@
 		<img src="audio.png" alt="">
 		<div class="stuff">
 			<ul>
-				<li>Audio Interface: <a href="#">Focusrite Scarlett 18i8 (2nd Gen)</a></li>
-				<li>Audio-Video Receiver: <a href="#">Yamaha TSR-5810</a></li>
-				<li>Mixer: <a href="#">Yamaha MG10</a></li>
-				<li>Microphone: <a href="#">Movo PC-M6</a></li>
-				<li>Headphones: <a href="#">OneOdio Pro 10</a></li>
+				<li>Audio Interface: <a
+						href="https://www.amazon.com/Focusrite-Scarlett-Audio-Interface-Tools/dp/B01E6T547Y">Focusrite
+						Scarlett 18i8 (2nd Gen)</a></li>
+				<li>Audio-Video Receiver: <a
+						href="https://usa.yamaha.com/products/audio_visual/av_receivers_amps/tsr-5810/index.html">Yamaha
+						TSR-5810</a></li>
+				<li>Mixer: <a href="https://www.amazon.com/Yamaha-MG10-10-Input-Stereo-Mixer/dp/B00I2J4TWG">Yamaha
+						MG10</a></li>
+				<li>Microphone: <a href="https://www.movophoto.com/products/pc-m6-podcast-microphone">Movo PC-M6</a>
+				</li>
+				<li>Headphones: <a href="https://www.oneodio.com/products/pro10-black-over-ear-headphones">OneOdio Pro
+						10</a></li>
 				<li>Bottom Speakers: <a href="#">Aiwa SX-NA302</a></li>
-				<li>Top Speakers: <a href="#">Bose 141 Series II</a></li>
+				<li>Top Speakers: <a
+						href="https://www.bose.com/en_us/support/products/bose_speakers_support/bose_stereo_support/141_series2.html">Bose
+						141 Series II</a></li>
 			</ul>
 		</div>
 	</div>
